check for 100% quota permission when downloading full record PDFs; refs #19325